--- a/src/Components/sidebar.css
+++ b/src/Components/sidebar.css
@@ -1,55 +1,119 @@
-body{
+body {
     margin: 0;
     height: 100vh;
     background-color: whitesmoke;
-}
-
-#root , .App{
+  }
+  
+  #root,
+  .App {
     height: 100%;
-}
-
-a{
+  }
+  
+  a {
     text-decoration: none;
-}
-
-.logo{
+    color: black;
+  }
+  
+  .logo {
     display: flex;
     justify-content: center;
-    line-height: 4rem;
-}
-
-.sidebar-container{
-    height: 100%;
-    width: 25%;
-    min-width: 250px;
+    line-height: 3rem;
+  }
+  
+  .sidebar-container {
+    position: relative;
+    min-height: 100%;
+    /* width: 25%; */
+    /* min-width: 250px; */
     background-color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
     font-size: 1.25rem;
     box-shadow: 1px 5px 10px #b0a8a8;
-}
-
-.sidebar-item{
+  }
+  
+  .sidebar-item {
     width: 100%;
     cursor: pointer;
     line-height: 2rem;
-    border-bottom: 1px solid black;
-}
-
-.dropdown-title{
+    padding: 10px 0px;
+    border-bottom: 1px solid #5d5d5d59;
+  }
+  
+  .sidebar-item:hover {
+    background-color: #e1e1e126;
+  }
+  
+  .active {
+    background-color: yellow;
+  }
+  
+  .dropdown-title {
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.dropdown-description{
+  }
+  
+  .dropdown-description {
     transition: all 0.5s ease-in-out;
+  
     display: flex;
     flex-direction: column;
     gap: 10px;
-    padding-top: 10px;
-    padding-left: 25px;
-}
+    padding: 10px 35px;
+  }
+  
+  .dropdown-item-title,
+  .single {
+    padding-left: 10px;
+    display: flex;
+  }
+  
+  .dropdown-icon {
+    padding-right: 10px;
+    display: flex;
+  }
+  
+  .dropdown-item {
+    display: flex;
+    gap: 5px;
+  }
+  
+  .dropdown-item-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  @keyframes inAnimation {
+    0% {
+      /* transform: translateY(-100%); */
+      opacity: 0;
+    }
+    100% {
+      /* transform: translateY(-100%); */
+      opacity: 1;
+    }
+  }
+  
+  @keyframes outAnimation {
+    0% {
+      opacity: 1;
+      /* transform: translateY(0); */
+    }
+    100% {
+      opacity: 0;
+      /* transform: translateY(-10%); */
+    }
+  }
+  
+  .sidebar-close-btn {
+    position: absolute;
+    top: 3.6%;
+    left: 88%;
+    z-index: 1;
+    cursor: pointer;
+  }
+  
